--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light dark" />
+    <meta name="theme-color" content="#77B5FE" />
+    <meta name="description" content="AS Panel - 服务器管理面板" />
     <title>AS Panel</title>
   </head>
   <body>
     <div id="app"></div>
+    <noscript>需要启用 JavaScript 才能使用 AS Panel。</noscript>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
